# first-kafka

./: .coverage  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
src/: config.py  consumer.py  producer.py
tests/: test_config.py  test_consumer.py  test_producer.py
