[project]
name = "first-kafka"
version = "0.1.0"
description = "First Kafka project with UV shortcuts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
producer = "src.producer:main"
consumer = "src.consumer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90

[tool.taskipy.tasks]
producer = "producer"
consumer = "consumer"
up = "docker compose up -d"
down = "docker compose down"
build = "docker build -t first-kafka ."
logs = "docker compose logs -f consumer"
pre-commit = "pre-commit install"
check = "pre-commit run --all-files"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
